<resources>
    <string name="app_name">YUNKA</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Acceder Sistema</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_gallery">Emergencia</string>
    <string name="menu_slideshow">Especialidades</string>
    <string name="menu_fb">Facebook</string>
    <string name="menu_tiktok">TikTok</string>
    <string name="menu_pau">Primeros Auxilios</string>
    <string name="menu_segca">Seguridad en Carretera</string>
    <string name="menu_incorpo">Incorporate</string>
    <string name="menu_procevuacion">Procedimientos de Evacuacion</string>
    <string name="menu_edseguridad">Educacion en Seguridad</string>


    <string-array name="tipos">
        <item>Viaje</item>
        <item>Punto de Registro</item>
        <item>Inspeccion</item>
    </string-array>
    <string name="seleccionar_tipo">Seleccionar tipo de producto</string>
    <string-array name="tipos_producto">
        <item>Incendio</item>
        <item>Emergencia Medica</item>
        <item>Rescate Animal</item>
        <item>Apoyo</item>
    </string-array>

    <string name="seleccionarpost">Seleccionar</string>
    <string-array name="selec_post">
        <item>SI</item>
        <item>NO</item>

    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>