<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="org.chakuy.chakuy.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="org.chakuy.chakuy.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="org.chakuy.chakuy.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_fb"
        android:name="org.chakuy.chakuy.ui.fb.fbFragment"
        android:label="@string/menu_fb"
        tools:layout="@layout/fragment_fb" />
    <fragment
        android:id="@+id/nav_tiktok"
        android:name="org.chakuy.chakuy.ui.tiktok.TikTokFragment"
        android:label="@string/menu_tiktok"
        tools:layout="@layout/fragment_tik_tok" />
    <fragment
        android:id="@+id/nav_pau"
        android:name="org.chakuy.chakuy.ui.gprimeros.PauFragment"
        android:label="@string/menu_pau"
        tools:layout="@layout/fragment_pau" />
    <fragment
        android:id="@+id/nav_inco"
        android:name="org.chakuy.chakuy.ui.incorporate.IncorpFragment"
        android:label="@string/menu_incorpo"
        tools:layout="@layout/fragment_incorp" />


</navigation>