<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_homex"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_add_regis"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_wchat"
            android:title="@string/menu_slideshow" />
    </group>

    <!-- Agregar un elemento de separador -->
    <item android:title="Redes Sociales" android:enabled="false" />

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_fb"
            android:icon="@drawable/ic_fb"
            android:title="@string/menu_fb"
            android:background="@color/transparent" />
        <item
            android:id="@+id/nav_tiktok"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_tiktok"
            android:background="@color/transparent" />
    </group>
</menu>
